--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <body>
     </body>
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="./vector.js"></script>
+    <script src="./player.js"></script>
+    <script src="./lava.js"></script>
+    <script src="./coin.js"></script>
+    <script src="./levels.js"></script>
     <script src="./level.js"></script>
     <script src="./display.js"></script>
     <script src="./index.js"></script>
